fix: no empty commands, and more spacing in anchors

--- a/public/styles.css
+++ b/public/styles.css
@@ -256,6 +256,10 @@ blockquote {
   padding-left: 8px;
 }
 
+.waypoints {
+  display: flex; gap: 24px;
+}
+
 .timeline {
   width: 100%; max-height: 20%;
   display: flex; gap: 32px;
